exports[`console > captures logs and errors from extension service worker 1`] = `
## Console messages
Showing 1-3 of 3 (Page 1 of 1).
msgid=1 [log] Service Worker starting... (1 args)
msgid=2 [warn] This is a warning from Service Worker (1 args)
msgid=3 [error] Uncaught Error: Intentional error from Service Worker (0 args)
`;

exports[`console > get_console_message > applies source maps to stack traces of Error object (with cause) console.log arguments 1`] = `
ID: 1
Message: log> foo failed Error: bar failed
### Arguments
Arg #0: foo failed
Arg #1: Error: bar failed
at foo (main.js:10:11)
at Iife (main.js:16:5)
at <anonymous> (main.js:14:1)
Caused by: Error: b00m!
at bar (main.js:3:9)
at foo (main.js:8:5)
at Iife (main.js:16:5)
at <anonymous> (main.js:14:1)
Note: line and column numbers use 1-based indexing
### Stack trace
at Iife (main.js:18:13)
at <anonymous> (main.js:14:1)
Note: line and column numbers use 1-based indexing
`;

exports[`console > get_console_message > applies source maps to stack traces of Error object console.log arguments 1`] = `
ID: 1
Message: log> An error happened: Error: b00m!
### Arguments
Arg #0: An error happened:
Arg #1: Error: b00m!
at bar (main.js:3:9)
at foo (main.js:7:3)
at Iife (main.js:12:5)
at <anonymous> (main.js:10:1)
Note: line and column numbers use 1-based indexing
### Stack trace
at Iife (main.js:14:13)
at <anonymous> (main.js:10:1)
Note: line and column numbers use 1-based indexing
`;

exports[`console > get_console_message > applies source maps to stack traces of console messages 1`] = `
ID: 1
Message: warn> hello world
### Arguments
Arg #0: hello world
### Stack trace
at bar (main.js:3:11)
at foo (main.js:7:3)
at Iife (main.js:11:3)
at <anonymous> (main.js:10:1)
Note: line and column numbers use 1-based indexing
`;

exports[`console > get_console_message > applies source maps to stack traces of uncaught exceptions 1`] = `
ID: 1
Message: error> Uncaught Error: b00m!
### Stack trace
at bar (main.js:3:9)
at foo (main.js:7:3)
at Iife (main.js:11:3)
at <anonymous> (main.js:10:1)
Note: line and column numbers use 1-based indexing
`;

exports[`console > get_console_message > applies source maps to stack traces of uncaught exceptions with cause 1`] = `
ID: 1
Message: error> Uncaught Error: foo failed
### Stack trace
at Iife (main.js:18:11)
at <anonymous> (main.js:14:1)
Caused by: Error: bar failed
at foo (main.js:10:11)
at Iife (main.js:16:5)
at <anonymous> (main.js:14:1)
Caused by: Error: b00m!
at bar (main.js:3:9)
at foo (main.js:8:5)
at Iife (main.js:16:5)
at <anonymous> (main.js:14:1)
Note: line and column numbers use 1-based indexing
`;

exports[`console > get_console_message > ignores frames from ignore listed URLs 1`] = `
ID: 1
Message: log> hello from callback
### Arguments
Arg #0: hello from callback
### Stack trace
at callback ('main.js':3:21)
at callIt ('main.js':7:13)
at  ('main.js':8:13)
Note: line and column numbers use 1-based indexing
`;

exports[`console > get_console_message > issues type > gets issue details with node id parsing 1`] = `
ID: 1
Message: issue> An element doesn’t have an autocomplete attribute

A form field has an \`id\` or \`name\` attribute that the browser’s autofill recognizes. However, it doesn’t have an \`autocomplete\` attribute assigned. This might stop the browser from correctly autofilling the form.

To fix this issue, provide an \`autocomplete\` attribute.
Learn more:
[HTML attribute: autocomplete](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/autocomplete#values)
### Affected resources
uid=1_1 data={"violatingNodeAttribute":"name"}
`;

exports[`console > get_console_message > issues type > gets issue details with request id parsing 1`] = `
ID: <ID>
Message: issue> Ensure CORS response header values are valid

A Cross-Origin Resource Sharing (CORS) request was blocked because of invalid or missing response headers of the request or the associated [preflight request](issueCorsPreflightRequest).

To fix this issue, ensure the response to the CORS request and/or the associated [preflight request](issueCorsPreflightRequest) aren’t missing headers and use valid header values.

Note that if an opaque response is sufficient, the request’s mode can be set to \`no-cors\` to fetch the resource with CORS disabled; that way CORS headers aren’t required but the response content is inaccessible (opaque).
Learn more:
[Cross-Origin Resource Sharing (CORS)](https://web.dev/cross-origin-resource-sharing)
### Affected resources
reqid=<reqid> data={"corsErrorStatus":{"corsError":"PreflightMissingAllowOriginHeader","failedParameter":""},"isWarning":false,"request":{"url":"http://127.0.0.1:<port>/data.json"},"initiatorOrigin":"","clientSecurityState":{"initiatorIsSecureContext":false,"initiatorIPAddressSpace":"Loopback","localNetworkAccessRequestPolicy":"BlockFromInsecureToMorePrivate"}}
`;

exports[`console > get_console_message > when dialog is open 1`] = `
{
  "dialog": {
    "type": "alert",
    "message": "test dialog",
    "defaultValue": ""
  },
  "consoleMessage": {
    "id": 1,
    "type": "error",
    "text": "This is an error",
    "argsCount": 1,
    "args": [
      "This is an error"
    ],
    "stackTrace": "at  (VM7:1:9)\\nat  (pptr:;CdpFrame.%3Canonymous%3E%20(<file-path>)\\n--- PendingScript ----------------------\\nat  (pptr:;CdpFrame.%3Canonymous%3E%20(<file-path>)\\nNote: line and column numbers use 1-based indexing"
  },
  "pagination": {
    "currentPage": 0,
    "totalPages": 1,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startIndex": 0,
    "endIndex": 1,
    "invalidPage": false
  },
  "consoleMessages": [
    {
      "type": "error",
      "text": "This is an error",
      "argsCount": 1,
      "id": 1
    }
  ]
}
`;

exports[`console > list_console_messages > issues > when dialog is open 1`] = `
{"content":[{"type":"text","text":"# Open dialog\\nalert: test dialog.\\nCall handle_dialog to handle it before continuing.\\n## Console messages\\nShowing 1-1 of 1 (Page 1 of 1).\\nmsgid=1 [log] Pre-dialog message (1 args)"}],"structuredContent":{"dialog":{"type":"alert","message":"test dialog","defaultValue":""},"pagination":{"currentPage":0,"totalPages":1,"hasNextPage":false,"hasPreviousPage":false,"startIndex":0,"endIndex":1,"invalidPage":false},"consoleMessages":[{"type":"log","text":"Pre-dialog message","argsCount":1,"id":1}]}}
`;

exports[`console > list_console_messages > lists error objects 1`] = `
## Console messages
Showing 1-1 of 1 (Page 1 of 1).
msgid=1 [error] Error: This is an error (1 args)
`;
